Fix z-index bug.

--- a/src/index.css
+++ b/src/index.css
@@ -38,7 +38,9 @@ body {
 main {
 	flex: 0 0 100%;
 	max-width: 100%;
+	position: relative;
 	width: 100%;
+	z-index: 2;
 }
 
 h1 {
